[package]
name    = "blockfast"
version = "0.2.0"

[dependencies]
arrayref          = "0.3.5"
bitcoin-bech32    = "0.11.0"
byteorder         = "1.3.2"
base58            = "0.1.0"
clap              = "2.33.0"
colog             = "0.2.1"
crossbeam-channel = "0.3.9"
crossbeam-utils   = "0.6.6"
dirs              = "2.0.2"
log               = "0.4.8"
memmap            = "0.7.0"
rayon             = "1.2.0"
rust-crypto       = "0.2.36"
rustc-serialize   = "0.3.24"
time              = "0.1.42"
vec_map           = "0.8.1"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 3                # Controls the --opt-level the compiler builds with
debug = true                 # Controls whether the compiler passes `-g`
debug-assertions = true      # Controls whether debug assertions are enabled

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3                # Controls the --opt-level the compiler builds with
debug = false                # Controls whether the compiler passes `-g`
debug-assertions = false     # Controls whether debug assertions are enabled
lto = true
